# BTL2

./: CMakeLists.txt  compile.sh  knight2.cpp  knight2.h  main.cpp  main.h  run.sh  sol.out  tc1_armyknights  tc1_events  test.cpp  toan.out
